feat: 전체 주문 조회 api 및 시나리오